@@ -282,11 +282,16 @@ static const char HTML_REL_END[] = "\n</div>";
 
 static const int TXT_ID_ALIGN_COLUMN = 80;  /* the alignment column of the id in export mode txt */
 static const char TXT_NEWLINE[] = "\n";
-static const char TXT_SINGLE_INDENT[] = "| ";
-static const char TXT_DOUBLE_INDENT[] = "  | ";
-static const char TXT_SPACE_INDENT[] = "  ";
+static const char TXT_NO_INDENT[] = "";
+static const char TXT_FEAT_INDENT[] = "+ ";
+static const char TXT_REL_INDENT[] = "* ";
+static const char TXT_CONTINUE_INDENT[] = "  ";
 static const char TXT_COLON_SPACE[] = ": ";
 static const char TXT_SPACE[] = " ";
+static const char TXT_CODE_START[] = "`";
+static const char TXT_CODE_END[] = "`";
+static const char TXT_DIAG_UNDERLINE = '=';  /* underline character for diagram names */
+static const char TXT_CLAS_UNDERLINE = '-';  /* underline character for classifier names */
 
 #define io_element_writer_impl_t document_element_writer_t
 /*!
@@ -923,10 +928,13 @@ u8_error_t document_element_writer_assemble_classifier( document_element_writer_
                                                           classifier_id
                                                         );
             export_err |= io_txt_writer_write_plain ( &((*this_).txt_writer), TXT_NEWLINE );
+            export_err |= io_txt_writer_fill (  &((*this_).txt_writer), TXT_CLAS_UNDERLINE, clas_codepoint );
+            export_err |= io_txt_writer_write_plain ( &((*this_).txt_writer), TXT_NEWLINE );
             export_err |= io_txt_writer_write_indent_multiline_string( &((*this_).txt_writer),
-                                                                       TXT_SINGLE_INDENT,
+                                                                       TXT_NO_INDENT,
                                                                        classifier_descr
                                                                      );
+            export_err |= io_txt_writer_write_plain ( &((*this_).txt_writer), TXT_NEWLINE );
         }
         break;
 
@@ -1124,7 +1132,7 @@ u8_error_t document_element_writer_assemble_feature( document_element_writer_t *
 
         case IO_FILE_FORMAT_TXT:
         {
-            export_err |= io_txt_writer_write_plain ( &((*this_).txt_writer), TXT_SPACE_INDENT );
+            export_err |= io_txt_writer_write_plain ( &((*this_).txt_writer), TXT_FEAT_INDENT );
             export_err |= io_txt_writer_write_plain ( &((*this_).txt_writer), feature_key );
             if ( 0 != feature_value_len )
             {
@@ -1136,7 +1144,7 @@ u8_error_t document_element_writer_assemble_feature( document_element_writer_t *
             const utf8stringview_t feature_value_view = UTF8STRINGVIEW_STR( feature_value );
             const size_t feat_key_codepoint = utf8stringview_count_codepoints( &feature_key_view );
             const size_t feat_value_codepoint = utf8stringview_count_codepoints( &feature_value_view );
-            int id_indent_width = TXT_ID_ALIGN_COLUMN - utf8string_get_length(TXT_SPACE_INDENT) - feat_key_codepoint
+            int id_indent_width = TXT_ID_ALIGN_COLUMN - utf8string_get_length(TXT_FEAT_INDENT) - feat_key_codepoint
                 - ((feature_value_len==0)?0:(feat_value_codepoint+utf8string_get_length(TXT_COLON_SPACE)));
             export_err |= io_txt_writer_write_aligned_id( &((*this_).txt_writer),
                                                           id_indent_width,
@@ -1144,7 +1152,7 @@ u8_error_t document_element_writer_assemble_feature( document_element_writer_t *
                                                         );
             export_err |= io_txt_writer_write_plain ( &((*this_).txt_writer), TXT_NEWLINE );
             export_err |= io_txt_writer_write_indent_multiline_string( &((*this_).txt_writer),
-                                                                       TXT_DOUBLE_INDENT,
+                                                                       TXT_CONTINUE_INDENT,
                                                                        feature_descr
                                                                      );
         }
@@ -1350,7 +1358,7 @@ u8_error_t document_element_writer_assemble_relationship( document_element_write
 
         case IO_FILE_FORMAT_TXT:
         {
-            export_err |= io_txt_writer_write_plain ( &((*this_).txt_writer), TXT_SPACE_INDENT );
+            export_err |= io_txt_writer_write_plain ( &((*this_).txt_writer), TXT_REL_INDENT );
 
             size_t relation_name_len = utf8string_get_length(relation_name);
             /* print arrow */
@@ -1359,7 +1367,9 @@ u8_error_t document_element_writer_assemble_relationship( document_element_write
                 export_err |= io_txt_writer_write_plain ( &((*this_).txt_writer), relation_name );
                 export_err |= io_txt_writer_write_plain ( &((*this_).txt_writer), TXT_SPACE );
             }
+            export_err |= io_txt_writer_write_plain ( &((*this_).txt_writer), TXT_CODE_START );
             export_err |= io_txt_writer_write_plain ( &((*this_).txt_writer), relation_txticon );
+            export_err |= io_txt_writer_write_plain ( &((*this_).txt_writer), TXT_CODE_END );
             export_err |= io_txt_writer_write_plain ( &((*this_).txt_writer), TXT_SPACE );
 
             export_err |= io_txt_writer_write_plain ( &((*this_).txt_writer), dest_classifier_name );
@@ -1373,9 +1383,11 @@ u8_error_t document_element_writer_assemble_relationship( document_element_write
             const size_t rel_dest_codepoint = utf8stringview_count_codepoints( &dest_classifier_name_view );
             int id_indent_width
                 = TXT_ID_ALIGN_COLUMN
-                - utf8string_get_length(TXT_SPACE_INDENT)
+                - utf8string_get_length(TXT_REL_INDENT)
                 - ((relation_name_len==0)?0:(rel_name_codepoint+utf8string_get_length(TXT_SPACE)))
+                - utf8string_get_length(TXT_CODE_START)
                 - rel_icon_codepoint
+                - utf8string_get_length(TXT_CODE_END)
                 - utf8string_get_length(TXT_SPACE)
                 - rel_dest_codepoint;
             export_err |= io_txt_writer_write_aligned_id( &((*this_).txt_writer),
@@ -1385,7 +1397,7 @@ u8_error_t document_element_writer_assemble_relationship( document_element_write
 
             export_err |= io_txt_writer_write_plain ( &((*this_).txt_writer), TXT_NEWLINE );
             export_err |= io_txt_writer_write_indent_multiline_string( &((*this_).txt_writer),
-                                                                       TXT_DOUBLE_INDENT,
+                                                                       TXT_CONTINUE_INDENT,
                                                                        relation_descr
                                                                      );
         }
@@ -1613,8 +1625,10 @@ u8_error_t document_element_writer_assemble_diagram( document_element_writer_t *
                                                           diag_id
                                                         );
             export_err |= io_txt_writer_write_plain ( &((*this_).txt_writer), TXT_NEWLINE );
+            export_err |= io_txt_writer_fill (  &((*this_).txt_writer), TXT_DIAG_UNDERLINE, diag_name_codepoint );
+            export_err |= io_txt_writer_write_plain ( &((*this_).txt_writer), TXT_NEWLINE );
             export_err |= io_txt_writer_write_indent_multiline_string( &((*this_).txt_writer),
-                                                                       TXT_SINGLE_INDENT,
+                                                                       TXT_NO_INDENT,
                                                                        diag_description
                                                                      );
         }
