@@ -230,7 +230,7 @@ u8_error_t json_schema_writer_write_schema( json_schema_writer_t *this_ )
     export_err |= json_schema_writer_private_declare_string( this_, JSON_CONSTANTS_KEY_DIAGRAM_PARENT_NAME, D_PARENT_NAME );
     static const char *const D_PARENT_ID = "uuid of the parent diagram, omitted by the root diagram";
     export_err |= json_schema_writer_private_declare_uuid( this_, JSON_CONSTANTS_KEY_DIAGRAM_PARENT, D_PARENT_ID, true );
-    static const char *const D_DIAGTYPE_ID = "id of diagram type, see source file data/include/data_diagram_type.h";
+    static const char *const D_DIAGTYPE_ID = "id of diagram type, see source file data/include/entity/data_diagram_type.h";
     export_err |= json_schema_writer_private_declare_integer( this_, JSON_CONSTANTS_KEY_DIAGRAM_DIAGRAM_TYPE, D_DIAGTYPE_ID );
     static const char *const D_DIAGTYPE_NAME
         = JSON_CONSTANTS_KEY_DIAGRAM_DIAGRAM_TYPE " as string, exported for reviews by humans, ignored at import";
@@ -240,7 +240,7 @@ u8_error_t json_schema_writer_write_schema( json_schema_writer_t *this_ )
     export_err |= json_schema_writer_private_declare_string( this_, JSON_CONSTANTS_KEY_DIAGRAM_NAME, "" );
     export_err |= json_schema_writer_private_declare_array_of_string( this_, JSON_CONSTANTS_KEY_DIAGRAM_DESCRIPTION, "", ANY_DESCR );
     export_err |= json_schema_writer_private_declare_integer( this_, JSON_CONSTANTS_KEY_DIAGRAM_LIST_ORDER, ANY_ORDER );
-    static const char *const D_FLAGS = "set of flags, see source file data/include/data_diagram_flag.h";
+    static const char *const D_FLAGS = "set of flags, see source file data/include/entity/data_diagram_flag.h";
     export_err |= json_schema_writer_private_declare_integer( this_, JSON_CONSTANTS_KEY_DIAGRAM_DISPLAY_FLAGS, D_FLAGS );
     static const char *const D_FLAG_NAME
         = JSON_CONSTANTS_KEY_DIAGRAM_DISPLAY_FLAGS " as string, exported for reviews by humans, ignored at import";
@@ -258,7 +258,7 @@ u8_error_t json_schema_writer_write_schema( json_schema_writer_t *this_ )
     static const char *const E_NODE_F_NAME
         = "name of " JSON_CONSTANTS_KEY_DIAGRAMELEMENT_NODE "/feature (if lifeline), optional, exported for reviews by humans, ignored at import";
     export_err |= json_schema_writer_private_declare_string( this_, JSON_CONSTANTS_KEY_DIAGRAMELEMENT_FOCUSED_FEATURE_NAME, E_NODE_F_NAME );
-    static const char *const E_FLAGS = "set of flags, see source file data/include/data_diagramelement_flag.h";
+    static const char *const E_FLAGS = "set of flags, see source file data/include/entity/data_diagramelement_flag.h";
     export_err |= json_schema_writer_private_declare_integer( this_, JSON_CONSTANTS_KEY_DIAGRAMELEMENT_DISPLAY_FLAGS, E_FLAGS );
     static const char *const E_FLAG_NAME
         = JSON_CONSTANTS_KEY_DIAGRAMELEMENT_DISPLAY_FLAGS " as string, exported for reviews by humans, ignored at import";
@@ -275,7 +275,7 @@ u8_error_t json_schema_writer_write_schema( json_schema_writer_t *this_ )
 
     (*this_).indent = 7;
     export_err |= json_schema_writer_private_declare_integer( this_, JSON_CONSTANTS_KEY_CLASSIFIER_ID, ANY_ID );
-    static const char *const C_TYPE_ID = "id of classifier type, see source file data/include/data_classifier_type.h";
+    static const char *const C_TYPE_ID = "id of classifier type, see source file data/include/entity/data_classifier_type.h";
     export_err |= json_schema_writer_private_declare_integer( this_, JSON_CONSTANTS_KEY_CLASSIFIER_MAIN_TYPE, C_TYPE_ID );
     static const char *const C_TYPE_NAME
         = "name of " JSON_CONSTANTS_KEY_CLASSIFIER_MAIN_TYPE ", exported for reviews by humans, ignored at import";
@@ -293,7 +293,7 @@ u8_error_t json_schema_writer_write_schema( json_schema_writer_t *this_ )
 
     (*this_).indent = 10;
     export_err |= json_schema_writer_private_declare_integer( this_, JSON_CONSTANTS_KEY_FEATURE_ID, ANY_ID );
-    static const char *const F_TYPE_ID = "id of feature type, see source file data/include/data_feature_type.h";
+    static const char *const F_TYPE_ID = "id of feature type, see source file data/include/entity/data_feature_type.h";
     export_err |= json_schema_writer_private_declare_integer( this_, JSON_CONSTANTS_KEY_FEATURE_MAIN_TYPE, F_TYPE_ID );
     static const char *const F_TYPE_NAME
         = "name of " JSON_CONSTANTS_KEY_FEATURE_MAIN_TYPE ", exported for reviews by humans, ignored at import";
@@ -313,7 +313,7 @@ u8_error_t json_schema_writer_write_schema( json_schema_writer_t *this_ )
 
     (*this_).indent = 7;
     export_err |= json_schema_writer_private_declare_integer( this_, JSON_CONSTANTS_KEY_RELATIONSHIP_ID, ANY_ID );
-    static const char *const R_TYPE_ID = "id of relationship type, see source file data/include/data_relationship_type.h";
+    static const char *const R_TYPE_ID = "id of relationship type, see source file data/include/entity/data_relationship_type.h";
     export_err |= json_schema_writer_private_declare_integer( this_, JSON_CONSTANTS_KEY_RELATIONSHIP_MAIN_TYPE, R_TYPE_ID );
     static const char *const R_TYPE_NAME
         = "name of " JSON_CONSTANTS_KEY_RELATIONSHIP_MAIN_TYPE ", exported for reviews by humans, ignored at import";
